# zephyr_apps

./: .gitignore  map.yml
adc_app/: CMakeLists.txt  sample.yaml
adc_app/boards/: nrf52840dk_nrf52840.overlay  nucleo_g071rb.overlay
adc_app/src/: main.c
binding_app/: CMakeLists.txt  sample.yaml
binding_app/boards/: nrf52840dk_nrf52840.overlay  nucleo_g071rb.overlay
binding_app/src/: main.c
kconfig_app/: CMakeLists.txt  Kconfig  custom.conf  prj.conf  sample.yaml
kconfig_app/boards/: nrf52840dk_nrf52840.conf  nucleo_g071rb.conf
kconfig_app/src/: main.c
logging_app/: CMakeLists.txt  prj.conf  sample.yaml
logging_app/src/: main.c
sensor_i2c/: CMakeLists.txt  prj.conf  sample.yaml
sensor_i2c/boards/: nrf52840dk_nrf52840.overlay  nucleo_f446re.overlay
sensor_i2c/src/: main.c
sensor_spi/: CMakeLists.txt  prj.conf  sample.yaml
sensor_spi/boards/: nrf52840dk_nrf52840.overlay  nucleo_f446re.overlay
sensor_spi/src/: main.c
spi_sample/: CMakeLists.txt  prj.conf  sample.yaml
spi_sample/boards/: nrf52840dk_nrf52840.overlay  nucleo_g071rb.overlay
spi_sample/src/: main.c
tests/test_app/: CMakeLists.txt  testcase.yaml
thread_app/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
thread_app/boards/: nucleo_g071rb.overlay
thread_app/src/: main.c  thread.c
thread_sync/: CMakeLists.txt  prj.conf  sample.yaml
thread_sync/src/: main.c
uart_dma/: CMakeLists.txt  sample.yaml
uart_interrupt/: CMakeLists.txt  prj.conf  sample.yaml
uart_polling/: CMakeLists.txt  prj.conf  sample.yaml
uart_ring_it/: CMakeLists.txt  prj.conf  sample.yaml
(+16 files in other folders)
